--- a/config/local-nginx.conf
+++ b/config/local-nginx.conf
@@ -6,7 +6,7 @@
 # =======================================================
 # 用于本地 nginx 配置, 服务器的 nginx config 用另一个文件
 #  rm /etc/nginx/sites-enabled/default
-#  ln -s /home/a/Desktop/OneMachineSearch/config/local-nginx.conf  /etc/nginx/sites-enabled/www.search.com
+#  ln -s /home/a/Desktop/OneMachineSearch/config/local-nginx.conf  /etc/nginx/sites-enabled/www.orange.com
 
 upstream orange {
     server unix:///var/www/orange/tmp/sockets/orange.sock;
